--- a/mycss/reminder.css
+++ b/mycss/reminder.css
@@ -5,12 +5,15 @@
 }
 
 
+/* Reminder container styles */
 .reminder-container {
-    flex: 0.8; /* Make the reminder container smaller */
+    flex: 1;
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 0 -4px 10px rgba(0, 0, 0, 0.1), 4px 0 10px rgba(0, 0, 0, 0.1), -4px 0 10px rgba(0, 0, 0, 0.1); /* Shadows on every side */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 100%; /* Make the reminder container take full width */
+    max-width: 1200px; /* Set a maximum width */
 }
 
 .reminder-container h2 {
